chore: prepare repo for open-source release
- Add MIT LICENSE file
- Add CONTRIBUTING.md with development guidelines
- Add CODE_OF_CONDUCT.md (Contributor Covenant 2.1)
- Add SECURITY.md with vulnerability reporting policy
- Add GitHub community files (issue templates, PR template, FUNDING.yml)
- Update .gitignore with comprehensive patterns
- Update package.json: rename to reend-components, add metadata (description, author, repository, license, keywords)
- Remove private flag from package.json
- Update README.md with badges, design tokens section, contributing links

--- a/package.json
+++ b/package.json
@@ -1,8 +1,29 @@
 {
-  "name": "vite_react_shadcn_ts",
-  "private": true,
-  "version": "0.0.0",
+  "name": "reend-components",
+  "version": "0.1.0",
+  "description": "Arknights: Endfield Design System — React component library with Tailwind CSS",
   "type": "module",
+  "license": "MIT",
+  "author": "VBeatDead (https://github.com/VBeatDead)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/VBeatDead/ReEnd-Components.git"
+  },
+  "bugs": {
+    "url": "https://github.com/VBeatDead/ReEnd-Components/issues"
+  },
+  "homepage": "https://github.com/VBeatDead/ReEnd-Components#readme",
+  "keywords": [
+    "react",
+    "components",
+    "ui",
+    "tailwindcss",
+    "design-system",
+    "arknights",
+    "endfield",
+    "typescript",
+    "radix-ui"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
