--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
-# Logs
-logs
+# ═══ Dependencies ═══
+node_modules/
+
+# ═══ Build outputs ═══
+dist/
+dist-ssr/
+dist-lib/
+*.tsbuildinfo
+
+# ═══ Logs ═══
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,18 +16,30 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# ═══ Environment / Secrets ═══
+.env
+.env.local
+.env.*.local
 *.local
 
-# Editor directories and files
-.vscode/*
+# ═══ Editor / IDE ═══
+.vscode
 !.vscode/extensions.json
-.idea
-.DS_Store
+!.vscode/settings.json
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# ═══ OS ═══
+.DS_Store
+Thumbs.db
+
+# ═══ Testing ═══
+coverage/
+
+# ═══ Misc ═══
+*.tgz
+docs/
